# coq-rust-extraction

./: .gitignore  .gitmodules  CHANGELOG.md  CoqMakefile.local  LICENSE  Makefile  README.md  _CoqProject  coq-rust-extraction.opam  process_extraction.sh  rocq-rust-extraction.opam
.github/: deps.opam.locked
.github/workflows/: build.yml  lint-opam.yml  nix-action-8.17.yml  nix-action-8.18.yml  nix-action-8.19.yml  nix-action-8.20.yml  nix-action-9.0.yml  refresh-cache.yml
.nix/: config.nix  coq-nix-toolbox.nix
.nix/coq-overlays/RustExtraction/: default.nix
.nix/coq-overlays/rust-extraction/: default.nix
extra/: header.html
extra/resources/coqdocjs/: coqdocjs.js
extraction/theories/: Common.v
plugin/: Makefile  RocqMakefile.local  _CoqProject  template-coq-files.txt  template-rocq-files.txt
plugin/src/: .gitignore  g_rust_extraction.mlg  rust_extraction_plugin.mlpack
plugin/theories/: ExtrRustBasic.v  ExtrRustCheckedArith.v  ExtrRustUncheckedArith.v  ExtrRustUncheckedArith9.v  Loader.v
tests/: Makefile  _CoqProject  process-extraction-examples.sh
tests/extracted-code/: Ack.main  BernsteinYangTermination.main  Even.main
tests/extracted-code/Ack-extracted/: Cargo.toml
tests/extracted-code/BernsteinYangTermination-extracted/: Cargo.toml
tests/extracted-code/Even-extracted/: Cargo.toml
tests/theories/: BernsteinYangTermination.v  InternalFix.v  RustExtractTests.v
theories/: Common.v  ExtractExtraction.v  PluginExtract.v  PrettyPrinterMonad.v  Printing.v  RustExtract.v  StringExtra.v  TopLevelFixes.v
