opam-version: "2.0"
name: "coq-rust-extraction"
version: "dev"
synopsis: "Coq extraction to Rust"
description: """
A framework for extracting Coq programs to Rust
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/coq-rust-extraction"
dev-repo: "git+https://github.com/AU-COBRA/coq-rust-extraction.git"
bug-reports: "https://github.com/AU-COBRA/coq-rust-extraction/issues"
doc: "https://au-cobra.github.io/ConCert/toc.html"

depends: [
  "coq" {>= "8.16" & < "8.17~"}
  "coq-metacoq-utils" {= "8.16.dev"}
  "coq-metacoq-common" {= "8.16.dev"}
  "coq-metacoq-template" {= "8.16.dev"}
  "coq-metacoq-template-pcuic" {= "8.16.dev"}
  "coq-metacoq-pcuic" {= "8.16.dev"}
  "coq-metacoq-safechecker" {= "8.16.dev"}
  "coq-metacoq-erasure" {= "8.16.dev"}
]

pin-depends: [
  ["coq-metacoq-utils.8.16.dev" "git+https://github.com/MetaCoq/metacoq.git#b96e7570a5e7fd959fe171d63398f4491fed338a"]
  ["coq-metacoq-common.8.16.dev" "git+https://github.com/MetaCoq/metacoq.git#b96e7570a5e7fd959fe171d63398f4491fed338a"]
  ["coq-metacoq-template.8.16.dev" "git+https://github.com/MetaCoq/metacoq.git#b96e7570a5e7fd959fe171d63398f4491fed338a"]
  ["coq-metacoq-template-pcuic.8.16.dev" "git+https://github.com/MetaCoq/metacoq.git#b96e7570a5e7fd959fe171d63398f4491fed338a"]
  ["coq-metacoq-pcuic.8.16.dev" "git+https://github.com/MetaCoq/metacoq.git#b96e7570a5e7fd959fe171d63398f4491fed338a"]
  ["coq-metacoq-safechecker.8.16.dev" "git+https://github.com/MetaCoq/metacoq.git#b96e7570a5e7fd959fe171d63398f4491fed338a"]
  ["coq-metacoq-erasure.8.16.dev" "git+https://github.com/MetaCoq/metacoq.git#b96e7570a5e7fd959fe171d63398f4491fed338a"]
]

build: [
  [make "plugin"]
  [make "tests"] {with-test}
]
install: [
  [make "install"]
  [make "-C" "tests" "install"] {with-test}
]