opam-version: "2.0"
name: "coq-rust-extraction"
version: "dev"
synopsis: "Coq extraction to Rust"
description: """
A framework for extracting Coq programs to Rust
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/coq-rust-extraction"
dev-repo: "git+https://github.com/AU-COBRA/coq-rust-extraction.git"
bug-reports: "https://github.com/AU-COBRA/coq-rust-extraction/issues"
doc: "https://au-cobra.github.io/coq-rust-extraction/toc.html"

depends: [
  "coq" {>= "9.0" & < "9.1~"}
  "coq-metacoq-utils" {>= "1.3.2" & < "1.4~"}
  "coq-metacoq-common" {>= "1.3.2" & < "1.4~"}
  "coq-metacoq-template" {>= "1.3.2" & < "1.4~"}
  "coq-metacoq-template-pcuic" {>= "1.3.2" & < "1.4~"}
  "coq-metacoq-pcuic" {>= "1.3.2" & < "1.4~"}
  "coq-metacoq-safechecker" {>= "1.3.2" & < "1.4~"}
  "coq-metacoq-erasure" {>= "1.3.2" & < "1.4~"}
]

build: [
  [make "plugin"]
  [make "tests"] {with-test}
]
install: [
  [make "install"]
]

tags: [
  "keyword:rust"
  "keyword:extraction"
  "logpath:RustExtraction"
]
