opam-version: "2.0"
name: "rocq-rust-extraction"
version: "dev"
synopsis: "Rocq extraction to Rust"
description: """
A framework for extracting Rocq programs to Rust
"""
maintainer: "Danil Annenkov <danil.v.annenkov@gmail.com>"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/coq-rust-extraction"
dev-repo: "git+https://github.com/AU-COBRA/coq-rust-extraction.git"
bug-reports: "https://github.com/AU-COBRA/coq-rust-extraction/issues"
doc: "https://au-cobra.github.io/coq-rust-extraction/toc.html"

depends: [
  "rocq-core" {>= "9.0" & < "9.1~"}
  "rocq-stdlib" {>= "9.0" & < "9.1~"}
  "rocq-metarocq-utils" {>= "1.4"}
  "rocq-metarocq-common" {>= "1.4"}
  "rocq-metarocq-template" {>= "1.4"}
  "rocq-metarocq-template-pcuic" {>= "1.4"}
  "rocq-metarocq-pcuic" {>= "1.4"}
  "rocq-metarocq-safechecker" {>= "1.4"}
  "rocq-metarocq-erasure" {>= "1.4"}
]

build: [
  [make "plugin"]
  [make "tests"] {with-test}
]
install: [
  [make "install"]
]

tags: [
  "keyword:rust"
  "keyword:extraction"
  "logpath:RustExtraction"
]
